[tool.poetry]
name = "astro-cli"
version = "0.1.1"
description = "query astronomical events from the CLI"
authors = ["redraw <redraw@sdf.org>"]
packages = [
    {include = "astro"}
]

[tool.poetry.dependencies]
python = "^3.9"
skyfield = "^1.39"
tabulate = "^0.8.9"
dateparser = "^1.1.0"
click = "^8.0.3"
diskcache = "^5.2.1"

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"
flake8 = "^4.0.1"
black = {version = "^21.10b0", allow-prereleases = true}

[tool.poetry.scripts]
astro = "astro.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
